# hephaestus

./: CHANGELOG.md  Cargo.toml  README.md  backlog.md  benchmark_results.md  build.rs  checklist.md  deny.toml  gap_audit.md
.cargo/: config.toml
.config/: nextest.toml
.github/: rocm-cargo-config.toml
.github/workflows/: python-release.yml  rocm.yml  rust-release.yml
crates/hephaestus-core/: Cargo.toml
crates/hephaestus-core/src/: lib.rs
crates/hephaestus-core/src/domain/: buffer.rs  decomposition.rs  device.rs  dialect.rs  error.rs  interface.rs  kernel.rs  launch.rs  mod.rs  ops.rs  planning.rs  reduction.rs  scan.rs  stream.rs
crates/hephaestus-cuda/: Cargo.toml
crates/hephaestus-cuda/benches/: comparative.rs
crates/hephaestus-cuda/examples/: cuda_init.rs  cuda_raw.rs
crates/hephaestus-cuda/src/: lib.rs
crates/hephaestus-cuda/src/application/: cuda_type.rs  mod.rs  pipeline.rs  random.rs  reduction.rs  scan.rs  storage_kernel.rs  stream.rs  strided.rs
crates/hephaestus-cuda/src/application/decomposition/: bidiagonal.rs  bunch_kaufman.rs  cholesky.rs  col_piv_qr.rs  eigen.rs  full_piv_lu.rs  hessenberg.rs  lu.rs  mod.rs  qr.rs  region.rs  schur.rs  svd.rs  udu.rs  validate.rs
crates/hephaestus-cuda/src/application/elementwise/: binary.rs  mod.rs  scalar.rs  unary.rs
crates/hephaestus-cuda/src/application/linalg/: kron.rs  matmul.rs  matpow.rs  matrix.rs  matrix_rank.rs  mod.rs  norms.rs  pinv_matexp.rs
crates/hephaestus-cuda/src/application/sparse/: mod.rs  spmm.rs  spmv.rs
crates/hephaestus-cuda/src/infrastructure/: buffer.rs  buffer_stub.rs  compiler.rs  device.rs  device_stub.rs  mod.rs  pinned.rs
crates/hephaestus-cuda/tests/: concurrency.rs  contract.rs  strided.rs  topology.rs
crates/hephaestus-metal/: Cargo.toml
crates/hephaestus-metal/src/: lib.rs
crates/hephaestus-metal/src/application/: decomposition.rs  elementwise.rs  linalg.rs  mod.rs  reduction.rs  scan.rs  strided.rs
crates/hephaestus-metal/src/infrastructure/: buffer.rs  device.rs  mod.rs
crates/hephaestus-metal/tests/: contract.rs
crates/hephaestus-python/: Cargo.toml  bench.py  bench_all.py  leto_python.pyd
crates/hephaestus-python/src/: array.rs  backend.rs  decomposition.rs  device.rs  elementwise.rs  lib.rs  linalg.rs  matfunc.rs  random.rs  reduction.rs  scan.rs  sparse.rs  spectral.rs
crates/hephaestus-python/tests/: test_cupy_parity.py
crates/hephaestus-rocm/: Cargo.toml
crates/hephaestus-rocm/src/: lib.rs
crates/hephaestus-rocm/src/application/: axis_reduction.rs  mod.rs  pipeline.rs  random.rs  reduction.rs  scan.rs  storage_kernel.rs  stream.rs  strided.rs  strided_elementwise.rs
crates/hephaestus-rocm/src/application/decomposition/: bidiagonal.rs  bunch_kaufman.rs  cholesky.rs  col_piv_qr.rs  eigen.rs  full_piv_lu.rs  hessenberg.rs  lu.rs  mod.rs  qr.rs  schur.rs  svd.rs  udu.rs  validate.rs
crates/hephaestus-rocm/src/application/elementwise/: binary.rs  mod.rs  scalar.rs  unary.rs
crates/hephaestus-rocm/src/application/linalg/: batched_matmul.rs  kron.rs  matmul.rs  matpow.rs  matrix_rank.rs  mod.rs  norms.rs
crates/hephaestus-rocm/src/application/sparse/: mod.rs  spmm.rs  spmv.rs
crates/hephaestus-rocm/src/infrastructure/: acquisition.rs  buffer.rs  buffer_stub.rs  capabilities.rs  device.rs  device_stub.rs  memory.rs  mod.rs  query.rs
crates/hephaestus-rocm/tests/: contract.rs
crates/hephaestus-wgpu/: Cargo.toml
crates/hephaestus-wgpu/benches/: comparative.rs  decomposition_sync.rs  elementwise_into.rs  prepared_map_reduction.rs  reduction_width.rs  scan_throughput.rs  sparse_comparative.rs
crates/hephaestus-wgpu/examples/: prepared_map_reduction.rs
crates/hephaestus-wgpu/src/: lib.rs
crates/hephaestus-wgpu/src/application/: elementwise.rs  linalg.rs  mod.rs  pipeline.rs  random.rs  reduction.rs  scan.rs  storage_kernel.rs  stream.rs  strided.rs  volume.rs  wgsl.rs
crates/hephaestus-wgpu/src/application/decomposition/: bidiagonal.rs  bunch_kaufman.rs  cholesky.rs  col_piv_qr.rs  eigen.rs  full_piv_lu.rs  hessenberg.rs  lu.rs  mod.rs  qr.rs  region.rs  schur.rs  svd.rs  udu.rs  validate.rs
crates/hephaestus-wgpu/src/application/elementwise/: binary.rs  mod.rs  scalar.rs  unary.rs
crates/hephaestus-wgpu/src/application/linalg/: map_reduction.rs
crates/hephaestus-wgpu/src/application/linalg/map_reduction/: shader.rs
crates/hephaestus-wgpu/src/application/reduction/: prepared.rs
crates/hephaestus-wgpu/src/application/sparse/: batch.rs  mod.rs  spmm.rs  spmv.rs
crates/hephaestus-wgpu/src/application/stencil/: laplacian2d.rs  mod.rs
crates/hephaestus-wgpu/src/application/stencil/laplacian2d/: tests.rs
crates/hephaestus-wgpu/src/infrastructure/: buffer.rs  device.rs  mod.rs  pool.rs
crates/hephaestus-wgpu/tests/: contract.rs  stencil_laplacian.rs  strided.rs  volume_ray_integral.rs  wgpu_reexport.rs
docs/adr/: 0001-cuda-backend.md  0002-atlas-compute-boundaries.md  0003-blocked-decomposition-consolidation.md  0004-wg-p4-composite-op-submit-batching.md  0005-immutable-wgpu-staging-callbacks.md  0006-wgpu-30-provider-abi.md  0007-provider-default-msrv.md  0008-odd-length-wgpu-storage.md  0009-order-preserving-tiled-scan.md  0010-eunomia-complex-provider.md  0011-aequitas-stencil-spacing.md  0012-rocm-backend.md
