[workspace]
resolver = "3"
members = [
    "crates/hephaestus-core",
    "crates/hephaestus-wgpu",
    "crates/hephaestus-cuda",
    "crates/hephaestus-metal",
    "crates/hephaestus-python",
]

[workspace.package]
version = "0.13.0"
edition = "2024"
rust-version = "1.87"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryancinsight/hephaestus.git"

[workspace.dependencies]
# ── Local Workspace Crates ──
hephaestus-core = { path = "crates/hephaestus-core" }
hephaestus-wgpu = { path = "crates/hephaestus-wgpu" }
hephaestus-cuda = { path = "crates/hephaestus-cuda" }
hephaestus-metal = { path = "crates/hephaestus-metal" }

# ── GPU ──
# Hephaestus owns the Atlas WGPU ABI; consumers pin this exact major.
# `default-features = false` drops WGPU's D3D12 backend: it is unused for Atlas
# GPU compute (vulkan on Windows/Linux, metal on macOS) and its wgpu-hal 30
# suballocation path pulls gpu-allocator↔windows D3D12 type edges that do not
# unify across consumers' independent dependency resolutions (see the
# `windows = "=0.62.2"` pin below). Explicit compute backends replace the
# default set minus D3D12.
wgpu = { version = "30.0.0", default-features = false, features = ["wgsl", "vulkan", "metal"] }
pollster = "0.3"

# gpu-allocator 0.28 accepts Windows bindings 0.53..=0.62 while WGPU HAL 30
# exchanges its D3D12 types with Windows 0.62. Pin the shared edge so Cargo
# cannot reuse Moirai PAL's independent Windows 0.58 binding for the allocator.
windows = "=0.62.2"

# ── Foundations ──
bytemuck = { version = "1.19", features = ["derive"] }
thiserror = "2.0"
# leto host-side layout metadata (shape/strides/offset + broadcast) reused as
# the backend-agnostic indexing vocabulary per atlas ADR 0001. Layout/array
# types only — no CPU compute dependency (leto-ops is not pulled).
leto = { git = "https://github.com/ryancinsight/leto.git", rev = "8651dfc18c25b9cec0ff96ad90c61c4fc2132be9", default-features = false, features = ["std", "parallel", "mnemosyne-memory"] }
# themis placement/topology law (atlas ADR 0002): hephaestus is the provider
# that reports device properties into themis GpuTopology snapshots.
themis = { git = "https://github.com/ryancinsight/themis", rev = "6140468c79279ec8f112641ea7422cef4688c7f6", default-features = false, features = ["std"] }
leto-ops = { git = "https://github.com/ryancinsight/leto.git", rev = "8651dfc18c25b9cec0ff96ad90c61c4fc2132be9", features = ["std", "parallel", "mnemosyne-memory", "topology"] }
mnemosyne-core = { git = "https://github.com/ryancinsight/Mnemosyne.git", rev = "4a9d2a32423f7c3f1413171193765d6aba34ad8e" }
moirai-gpu = { git = "https://github.com/ryancinsight/Moirai.git", rev = "c43f86a21e0ea73d8e3bba68d75db9cedae3abb3", default-features = false, features = [
    "std",
    "parallel",
    "mnemosyne-memory",
] }
moirai-sync = { git = "https://github.com/ryancinsight/Moirai.git", rev = "c43f86a21e0ea73d8e3bba68d75db9cedae3abb3" }
moirai = { git = "https://github.com/ryancinsight/Moirai.git", rev = "c43f86a21e0ea73d8e3bba68d75db9cedae3abb3", default-features = false, features = ["async"] }
ndarray = "0.16"
nalgebra = { version = "0.35", default-features = false, features = ["std"] }

# ── Python FFI ──
pyo3 = { version = "0.29.0", features = ["extension-module"] }
numpy = "0.29.0"
num-complex = { version = "0.4", features = ["bytemuck"] }

[patch."https://github.com/ryancinsight/Mnemosyne.git"]
mnemosyne = { path = "../mnemosyne/crates/mnemosyne" }
mnemosyne-core = { path = "../mnemosyne/crates/mnemosyne-core" }
mnemosyne-backend = { path = "../mnemosyne/crates/mnemosyne-backend" }
mnemosyne-arena = { path = "../mnemosyne/crates/mnemosyne-arena" }
mnemosyne-local = { path = "../mnemosyne/crates/mnemosyne-local" }
mnemosyne-heap = { path = "../mnemosyne/crates/mnemosyne-heap" }
mnemosyne-decay = { path = "../mnemosyne/crates/mnemosyne-decay" }
mnemosyne-prof = { path = "../mnemosyne/crates/mnemosyne-prof" }
mnemosyne-hardened = { path = "../mnemosyne/crates/mnemosyne-hardened" }
mnemosyne-build-util = { path = "../mnemosyne/crates/mnemosyne-build-util" }

[patch."https://github.com/ryancinsight/leto.git"]
leto = { path = "../leto/crates/leto" }
leto-ops = { path = "../leto/crates/leto-ops" }

[patch."https://github.com/ryancinsight/Moirai.git"]
moirai = { path = "../moirai/moirai" }
moirai-core = { path = "../moirai/moirai-core" }
moirai-scheduler = { path = "../moirai/moirai-scheduler" }
moirai-parallel = { path = "../moirai/moirai-parallel" }
moirai-gpu = { path = "../moirai/moirai-gpu" }
moirai-sync = { path = "../moirai/moirai-sync" }
moirai-async = { path = "../moirai/moirai-async" }
moirai-executor = { path = "../moirai/moirai-executor" }
moirai-transport = { path = "../moirai/moirai-transport" }
moirai-iter = { path = "../moirai/moirai-iter" }
moirai-pal = { path = "../moirai/moirai-pal" }
moirai-utils = { path = "../moirai/moirai-utils" }

[patch."https://github.com/ryancinsight/hermes.git"]
hermes-simd = { path = "../hermes/crates/hermes-simd" }

[patch."https://github.com/ryancinsight/eunomia"]
eunomia = { path = "../eunomia/crates/eunomia" }

[patch."https://github.com/ryancinsight/melinoe.git"]
melinoe = { path = "../melinoe" }

[patch."https://github.com/ryancinsight/themis"]
themis = { path = "../themis" }

