[workspace]
resolver = "3"
members = [
    "crates/hephaestus-core",
    "crates/hephaestus-wgpu",
    "crates/hephaestus-cuda",
    "crates/hephaestus-metal",
    "crates/hephaestus-python",
]

[workspace.package]
version = "0.14.0"
edition = "2024"
rust-version = "1.87"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryancinsight/hephaestus.git"

[workspace.dependencies]
# ── Local Workspace Crates ──
hephaestus-core = { path = "crates/hephaestus-core" }
hephaestus-wgpu = { path = "crates/hephaestus-wgpu" }
hephaestus-cuda = { path = "crates/hephaestus-cuda" }
hephaestus-metal = { path = "crates/hephaestus-metal" }

# ── GPU ──
# Hephaestus owns the Atlas WGPU ABI; consumers pin this exact major.
# `default-features = false` drops WGPU's D3D12 backend: it is unused for Atlas
# GPU compute (vulkan on Windows/Linux, metal on macOS) and its wgpu-hal 30
# suballocation path pulls gpu-allocator↔windows D3D12 type edges that do not
# unify across consumers' independent dependency resolutions (see the
# `windows = "=0.62.2"` pin below). Explicit compute backends replace the
# default set minus D3D12.
wgpu = { version = "30.0.0", default-features = false, features = ["wgsl", "vulkan", "metal"] }
pollster = "0.3"

# gpu-allocator 0.28 accepts Windows bindings 0.53..=0.62 while WGPU HAL 30
# exchanges its D3D12 types with Windows 0.62. Pin the shared edge so Cargo
# cannot reuse Moirai PAL's independent Windows 0.58 binding for the allocator.
windows = "=0.62.2"

# ── Foundations ──
bytemuck = { version = "1.19", features = ["derive"] }
thiserror = "2.0"
# leto host-side layout metadata (shape/strides/offset + broadcast) reused as
# the backend-agnostic indexing vocabulary per atlas ADR 0001. Layout/array
# types only — no CPU compute dependency (leto-ops is not pulled).
leto = { git = "https://github.com/ryancinsight/leto.git", default-features = false, features = ["std", "parallel", "mnemosyne-memory"] }
# themis placement/topology law (atlas ADR 0002): hephaestus is the provider
# that reports device properties into themis GpuTopology snapshots.
themis = { git = "https://github.com/ryancinsight/themis", default-features = false, features = ["std"] }
leto-ops = { git = "https://github.com/ryancinsight/leto.git", features = ["std", "parallel", "mnemosyne-memory", "topology"] }
mnemosyne-core = { git = "https://github.com/ryancinsight/Mnemosyne.git" }
moirai-gpu = { git = "https://github.com/ryancinsight/Moirai.git", default-features = false, features = [
    "std",
    "parallel",
    "mnemosyne-memory",
] }
moirai-sync = { git = "https://github.com/ryancinsight/Moirai.git" }
moirai = { git = "https://github.com/ryancinsight/Moirai.git", default-features = false, features = ["async"] }
ndarray = "0.16"
nalgebra = { version = "0.35", default-features = false, features = ["std"] }

# ── Python FFI ──
pyo3 = { version = "0.29.0", features = ["extension-module"] }
numpy = "0.29.0"
num-complex = { version = "0.4", features = ["bytemuck"] }

