[package]
name = "hephaestus-core"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU-dependency-free device, buffer, and dispatch contracts for the Atlas accelerator substrate."

[features]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
bytemuck = { workspace = true }
thiserror = { workspace = true }
themis = { workspace = true }
# leto host-side layout metadata (shape/strides/offset) is ADR-0001's
# backend-agnostic indexing vocabulary; core hosts the shared layout-based
# dispatch planning (axis scan) so backends do not each duplicate it. Layout
# and error types only — no GPU dependency, keeping core GPU-free.
leto = { workspace = true, default-features = false, features = ["std"] }
