[package]
name = "hephaestus-cuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CUDA backend for the Atlas accelerator substrate: dynamic-loaded driver device acquisition, typed device buffers, and host/device transfer."

[features]
# Default includes the CUDA toolchain so the crate builds and runs with CUDA
# support enabled by default. `cuda` pulls the dynamic-loaded cutile-rs driver
# (no toolkit needed to build — `nvcuda`/`libcuda` is loaded at runtime),
# mirroring coeus-cuda's gating.
default = ["parallel", "mnemosyne-memory", "decomposition", "cuda"]
parallel = []
mnemosyne-memory = []
cuda = ["dep:cutile", "dep:cuda-core", "dep:cuda-async", "dep:libloading"]
## Enable dense matrix decompositions (Cholesky, LU, QR) backed by leto-ops.
decomposition = []

[dependencies]
hephaestus-core = { workspace = true }
leto = { workspace = true }
num-complex = { workspace = true }
leto-ops = { workspace = true }
bytemuck = { workspace = true }
themis = { workspace = true }
mnemosyne-core = { workspace = true }
mnemosyne-backend = { workspace = true }
mnemosyne = { workspace = true }
moirai-gpu = { workspace = true }
moirai-sync = { workspace = true }
libloading = { version = "0.8", optional = true }
# cutile-rs (NVlabs): same git source coeus-cuda composes. cuda-core supplies
# the driver `sys` bindings; cuda-async supplies device/context/stream
# acquisition. Optional + feature-gated; absent from the default build.
cutile = { git = "https://github.com/NVlabs/cutile-rs", optional = true }
cuda-core = { git = "https://github.com/NVlabs/cutile-rs", package = "cuda-core", optional = true }
cuda-async = { git = "https://github.com/NVlabs/cutile-rs", package = "cuda-async", optional = true }

[dev-dependencies]
ndarray = { workspace = true }
nalgebra = { workspace = true }

[[bench]]
name = "comparative"
harness = false
required-features = ["decomposition"]

[[example]]
name = "cuda_init"
required-features = ["cuda"]

[[example]]
name = "cuda_raw"
required-features = ["cuda"]
