[package]
name = "hephaestus-cuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CUDA backend for the Atlas accelerator substrate: dynamic-loaded driver device acquisition, typed device buffers, and host/device transfer."

[features]
# Default includes the CUDA toolchain so the crate builds and runs with CUDA
# support enabled by default. `cuda` pulls the dynamic-loaded cutile-rs driver
# (no toolkit needed to build — `nvcuda`/`libcuda` is loaded at runtime),
# mirroring coeus-cuda's gating.
default = ["parallel", "mnemosyne-memory", "decomposition", "cuda"]
parallel = []
mnemosyne-memory = []
cuda = ["dep:cutile", "dep:cuda-oxide", "dep:libloading"]
## Enable dense matrix decompositions (Cholesky, LU, QR) backed by leto-ops.
decomposition = []

[dependencies]
hephaestus-core = { workspace = true }
leto = { workspace = true }
num-complex = { workspace = true }
leto-ops = { workspace = true }
bytemuck = { workspace = true }
themis = { workspace = true }
mnemosyne-core = { workspace = true }
moirai-gpu = { workspace = true }
moirai-sync = { workspace = true }
libloading = { version = "0.8", optional = true }
# cuda-oxide owns the device substrate per ADR 0001; cutile remains the
# kernel-authoring dependency above that substrate.
cuda-oxide = { version = "0.4.0", optional = true }
cutile = { git = "https://github.com/NVlabs/cutile-rs", optional = true }

[dev-dependencies]
ndarray = { workspace = true }
nalgebra = { workspace = true }

[[bench]]
name = "comparative"
harness = false
required-features = ["decomposition"]

[[example]]
name = "cuda_init"
required-features = ["cuda"]

[[example]]
name = "cuda_raw"
required-features = ["cuda"]
