[package]
name = "hephaestus-wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "wgpu backend for the Atlas accelerator substrate: device acquisition, typed buffers, and monomorphized compute dispatch."

[features]
default = ["parallel", "mnemosyne-memory", "decomposition"]
parallel = []
mnemosyne-memory = []
## Enable dense matrix decompositions (Cholesky, LU, QR) backed by leto-ops.
decomposition = ["dep:leto-ops"]

[dependencies]
hephaestus-core = { workspace = true }
leto = { workspace = true }
leto-ops = { workspace = true, optional = true }
themis = { workspace = true }
mnemosyne-core = { workspace = true }
moirai-gpu = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
num-complex = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
leto-ops = { workspace = true }
ndarray = { workspace = true }
nalgebra = { workspace = true }
hephaestus-cuda = { workspace = true }

[[bench]]
name = "elementwise_into"
harness = false

[[bench]]
name = "reduction_width"
harness = false

[[bench]]
name = "comparative"
harness = false

[[bench]]
name = "decomposition_sync"
harness = false
