[package]
name = "hephaestus-wgpu"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "wgpu backend for the Atlas accelerator substrate: device acquisition, typed buffers, and monomorphized compute dispatch."

[features]
default = ["parallel", "mnemosyne-memory", "decomposition", "sparse"]
parallel = []
mnemosyne-memory = []
## Enable dense matrix decompositions (Cholesky, LU, QR) backed by leto-ops.
decomposition = ["dep:leto-ops"]
## Enable CSR sparse matrix upload/download and GPU sparse products.
sparse = ["dep:leto-ops"]
## Enable the WGPU-versus-CUDA comparative benchmark target.
cuda-comparative = ["dep:hephaestus-cuda"]

[dependencies]
hephaestus-core = { workspace = true }
leto = { workspace = true }
num-complex = { workspace = true }
leto-ops = { workspace = true, optional = true }
themis = { workspace = true }
mnemosyne-core = { workspace = true }
moirai-gpu = { workspace = true }
moirai-sync = { workspace = true }
moirai = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
hephaestus-cuda = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
# Resolution constraint for WGPU HAL's gpu-allocator D3D12 type identity.
windows = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
leto-ops = { workspace = true }

[[bench]]
name = "elementwise_into"
harness = false

[[bench]]
name = "reduction_width"
harness = false

[[bench]]
name = "comparative"
harness = false
required-features = ["cuda-comparative"]

[[bench]]
name = "sparse_comparative"
harness = false

[[bench]]
name = "decomposition_sync"
harness = false

[[bench]]
name = "scan_throughput"
harness = false
